--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "ubie-design-tokens-for-vscode",
-  "version": "0.0.4",
-  "description": "Ubie Design Tokens for VS Code",
-  "publisher": "Ubie",
+  "name": "spectrum-design-tokens-for-vscode",
+  "version": "0.0.1",
+  "description": "Spectrum Design Tokens for VS Code",
+  "publisher": "Adobe",
   "engines": {
     "vscode": "^1.70.0"
   },
   "license": "SEE LICENSE IN LICENSE",
-  "displayName": "Ubie Design Tokens for VS Code",
+  "displayName": "Spectrum Design Tokens for VS Code",
   "categories": [
     "Other"
   ],
   "keywords": [
-    "Ubie",
+    "Spectrum",
     "Design Tokens"
   ],
   "main": "./dist/client.js",
@@ -22,9 +22,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ubie-oss/design-tokens-for-vscode.git"
+    "url": "https://github.com/Rajdeepc/spectrum-vscode.git"
   },
-  "icon": "docs/ubie-icon.png",
   "scripts": {
     "vscode:prepublish": "npm run esbuild-base -- --minify",
     "esbuild-base": "rimraf dist && esbuild ./src/client.ts ./src/server.ts --bundle --outdir=dist --external:vscode --format=cjs --platform=node",
@@ -35,7 +34,7 @@
     "package": "vsce package"
   },
   "dependencies": {
-    "@ubie/design-tokens": "0.1.3",
+    "@spectrum-css/tokens": "0.1.3",
     "vscode-languageclient": "^8.0.2",
     "vscode-languageserver": "^8.0.2",
     "vscode-languageserver-textdocument": "^1.0.5"
@@ -45,7 +44,6 @@
     "@types/vscode": "^1.70.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
-    "@ubie/prettier-config": "^0.1.0",
     "esbuild": "^0.15.5",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
